--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gl-mat4": "^1.2.0",
     "regl": "^2.0.1",
     "resl": "^1.0.3",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-vimeo-player": "^0.1.3"
   },
   "engines": {
     "node": "12"
