--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "angle-normals": "^1.0.0",
+    "bunny": "^1.0.1",
     "gl-mat4": "^1.2.0",
     "regl": "^2.0.1",
     "resl": "^1.0.3",
