--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --host 0.0.0.0"
+    "start": "sirv public --host 0.0.0.0 --single"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
@@ -22,6 +22,7 @@
     "regl": "^2.0.1",
     "resl": "^1.0.3",
     "sirv-cli": "^1.0.0",
+    "svelte-routing": "^1.4.2",
     "svelte-vimeo-player": "^0.1.3"
   },
   "engines": {
