--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "regl": "^2.0.1",
     "resl": "^1.0.3",
     "sirv-cli": "^1.0.0",
-    "svelte-routing": "^1.4.2",
+    "svelte-navigator": "^3.1.3",
     "svelte-vimeo-player": "^0.1.3"
   },
   "engines": {
