--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gl-mat4": "^1.2.0",
     "regl": "^2.0.1",
     "resl": "^1.0.3",
+    "rollup-plugin-copy": "^3.3.0",
     "sirv-cli": "^1.0.0",
     "svelte-navigator": "^3.1.3",
     "svelte-vimeo-player": "^0.1.3"
