--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "rollup-plugin-terser": "^7.0.0",
     "sass": "^1.30.0",
     "svelte": "^3.0.0",
-    "svelte-preprocess": "^4.6.1"
+    "svelte-preprocess": "^4.6.1",
+    "svelte-style-directive": "^1.1.0"
   },
   "dependencies": {
     "angle-normals": "^1.0.0",
