--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "rollup-plugin-copy": "^3.3.0",
     "sirv-cli": "^1.0.0",
     "svelte-navigator": "^3.1.3",
-    "svelte-vimeo-player": "^0.1.3"
+    "svelte-vimeo-player": "^0.1.3",
+    "three": "^0.123.0"
   },
   "engines": {
     "node": "12"
