--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss-load-config": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-root-import": "^1.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sass": "^1.30.0",
