--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angle-normals": "^1.0.0",
     "bunny": "^1.0.1",
     "gl-mat4": "^1.2.0",
+    "js-cookie": "^2.2.1",
     "lorem-ipsum": "^2.0.3",
     "regl": "^2.0.1",
     "resl": "^1.0.3",
