--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "autoprefixer": "^10.1.0",
+    "dotenv": "^8.2.0",
     "postcss": "^8.2.1",
     "postcss-load-config": "^3.0.0",
     "rollup": "^2.3.4",
@@ -32,6 +33,9 @@
     "resl": "^1.0.3",
     "rollup-plugin-copy": "^3.3.0",
     "sirv-cli": "^1.0.0",
+    "svelte-apollo": "^0.4.0",
+    "@apollo/client": "^3.2.0",
+    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
     "svelte-navigator": "^3.1.3",
     "svelte-vimeo-player": "^0.1.3",
     "three": "^0.123.0"
