--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "sirv public --host 0.0.0.0 --single"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "autoprefixer": "^10.1.0",
