--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
     "postcss": "^8.2.1",
     "postcss-load-config": "^3.0.0",
     "rollup": "^2.3.4",
+    "rollup-plugin-hot": "^0.1.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-root-import": "^1.0.0",
     "rollup-plugin-svelte": "^6.0.0",
+    "rollup-plugin-svelte-hot": "^0.13.0",
     "rollup-plugin-terser": "^7.0.0",
     "sass": "^1.30.0",
     "svelte": "^3.0.0",
@@ -36,6 +38,7 @@
     "sirv-cli": "^1.0.0",
     "svelte-apollo": "^0.4.0",
     "@apollo/client": "^3.2.0",
+    "react": "^17.0.0",
     "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
     "svelte-navigator": "^3.1.3",
     "svelte-vimeo-player": "^0.1.3",
