--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss-load-config": "^3.0.0",
     "react": "^17.0.1",
     "rollup": "^2.3.4",
+    "rollup-plugin-gzip": "^2.5.0",
     "rollup-plugin-hot": "^0.1.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-root-import": "^1.0.0",
