--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --host 0.0.0.0 --single"
+    "start:dev": "sirv public --host 0.0.0.0 --single --dev",
+    "start": "sirv public --host 0.0.0.0 --single --gzip --brotli --quiet"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
