--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-graphql": "^1.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
