--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "rollup -c -w --exports named",
     "start:dev": "sirv public --host 0.0.0.0 --single --dev",
     "start": "sirv public --host 0.0.0.0 --single --gzip --brotli --quiet"
   },
