--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gl-mat4": "^1.2.0",
     "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
     "js-cookie": "^2.2.1",
+    "marked": "^1.2.5",
     "sirv-cli": "^1.0.10",
     "svelte-apollo": "^0.4.0",
     "svelte-markdown": "0.0.4",
